--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,23 @@
 
 buildscript {
     repositories {
-        jcenter()
+       mavenLocal()
+      //  mavenCentral()
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
+/*        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        jcenter()*/
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-
+        classpath 'com.android.tools.build:gradle:3.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,7 +26,19 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenLocal()
+     //  mavenCentral()
+/*       maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }*/
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        //jcenter()
+
     }
 }
 
