--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Mon Dec 28 10:00:20 PST 2015
+#Wed Nov 14 14:28:40 CST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=file:///D:/android-studio/gradle/gradle-4.6-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
+#
